--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>My awesome web page</title>
+        <h1><title>NinjaVideshPlayz Merch</title></h1>
     </head>
 
   <body>
-    Hello there, awesome person! 
+    Merch is Running out!
   </body>
 
 </html>
