--- a/index.html
+++ b/index.html
@@ -7,4 +7,6 @@
     Hello there, awesome person! 
   </body>
 
+    <img src="https://avatars3.githubusercontent.com/u/69463066?v=4">
+    
 </html>
